Адрес поставки в заказе

--- a/admin/view/template/sale/order_form.twig
+++ b/admin/view/template/sale/order_form.twig
@@ -533,7 +533,19 @@
 
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/suggestions-jquery@21.12.0/dist/css/suggestions.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/suggestions-jquery@21.12.0/dist/js/jquery.suggestions.min.js"></script>
 
+
+  <script type="text/javascript"><!--
+    var dadataToken = "2665fdf7fc2ea41b7ae830eb47ca0d0379c543f7";
+
+    //autocomplete address
+    $("#input-delivery").suggestions({
+      token: dadataToken,
+      type: "ADDRESS"
+    });
+  </script>
   <script type="text/javascript"><!--
 
 $(document).ready(function() {
