--- a/catalog/view/theme/default/template/common/search.twig
+++ b/catalog/view/theme/default/template/common/search.twig
@@ -2,6 +2,6 @@
 <div id="search" class="input-group">
   <input type="text" name="search" value="{{ search }}" placeholder="{{ text_search }}" class="form-control input-lg" />
   <span class="input-group-btn">
-    <button type="button" class="btn btn-default btn-lg"><img src="/image/search.svg" class="sr" /></button>
+    <button style="margin: 2px 1px 0 0;" type="button" class="btn btn-default btn-lg"><img src="/image/search.svg" class="sr" /></button>
   </span>
 </div>
