--- a/catalog/view/theme/default/template/common/popups.twig
+++ b/catalog/view/theme/default/template/common/popups.twig
@@ -5,16 +5,34 @@
         <form action="{{ action }}" method="post" id="form-rev" enctype="multipart/form-data" class="form-horizontal col-sm-12">
         <fieldset>
           <div class="form-group required obj_name">
-            <label class="control-label" for="input-name">{{ entry_name }}</label>
-              <input type="text" name="name" value="{{ name }}" id="input-name" class="form-control" />
+            <label class="control-label" for="popup-input-name">{{ entry_name }}</label>
+              <input type="text" name="{{ token }}_name" value="{{ name }}" id="popup-input-name" class="form-control" />
+              <input type="hidden" name="name" value="{{ name }}" />
+              <script>
+                  $('#popup-input-name').on('input keyup', function(e) {
+                      $('input[name=name]').val($(this).val())
+                  });
+              </script>
           </div>
 		  <div class="form-group required obj_telephone">
-            <label class="control-label" for="input-telephone">{{ entry_telephone }}</label>
-              <input type="text" name="telephone" id="phone" value="{{ telephone }}" id="input-telephone" class="form-control" />
+            <label class="control-label" for="popup-input-telephone">{{ entry_telephone }}</label>
+              <input type="text" name="{{ token }}_telephone" value="{{ telephone }}" id="popup-input-telephone" class="form-control" />
+              <input type="hidden" name="telephone" value="{{ telephone }}" />
+              <script>
+                  $('#popup-input-telephone').on('input keyup', function(e) {
+                      $('input[name=telephone]').val($(this).val())
+                  });
+              </script>
           </div>
           <div class="form-group required obj_email">
-            <label class="control-label" for="input-email">{{ entry_email }}</label>
-              <input type="text" name="email" value="{{ email }}" id="input-email" class="form-control" />
+            <label class="control-label" for="popup-input-email">{{ entry_email }}</label>
+              <input type="text" name="{{ token }}_email" value="{{ email }}" id="popup-input-email" class="form-control" />
+              <input type="hidden" name="email" value="{{ email }}" />
+              <script>
+                  $('#popup-input-email').on('input keyup', function(e) {
+                      $('input[name=email]').val($(this).val())
+                  });
+              </script>
           </div>
           <div class="form-group">
             <label class="control-label" for="input-enquiry">{{ entry_enquiry }}</label>
@@ -31,9 +49,11 @@
         <div class="buttons">
           <div class="">
             <input class="btn btn-primary btn-block btn-lg" data-loading-text="{{ text_loading }}" id="button-form1" type="button" value="{{ button_submit }}" />
-			<input type="hidden" name="vid" value="1" />
               {% if product_id is not null %}
-              <input type="hidden" name="product_id" value="{{ product_id }}" />
+                  <input type="hidden" name="product_id" value="{{ product_id }}" />
+                  <input type="hidden" name="vid" value="2" />
+              {% else %}
+                  <input type="hidden" name="vid" value="1" />
               {% endif %}
           </div>
         </div>
@@ -94,6 +114,6 @@ $('#button-form1').on('click', function() {
 });
 
 $(function(){
-    $("#phone").mask("+7 (999)999-99-99");
+    $("#popup-input-telephone").mask("+7 (999)999-99-99");
 });
 //--></script>
