--- a/catalog/view/theme/default/template/common/column_left.twig
+++ b/catalog/view/theme/default/template/common/column_left.twig
@@ -1,5 +1,5 @@
 <aside id="column-left" class="col-sm-3 hidden-xs">
-  <div class="list-group" style="background: white; padding-top: 10px">
+  <div class="list-group">
 
           <div><a href="{{ home }}"><span class="home"></span> <span class="texts">Главная</span></a></div>
           <!--<div><a href="index.php?route=checkout/cart"><span class="cart"></span> <span class="texts">Корзина</span></a></div>-->
