Переверстка главной страницы: Баннеры Слайдер

--- a/catalog/view/theme/default/template/extension/module/category.twig
+++ b/catalog/view/theme/default/template/extension/module/category.twig
@@ -1,5 +1,5 @@
 <nav id="menuVertical">
-    <div class="cat_verh" style="padding: 10px 15px">Каталог</div>
+    <div class="cat_verh">Каталог</div>
     <ul>
         {% for category in categories %}
         <li><a href="{{ category.href }}" class="list-group-item">{{ category.name }}</a>
