--- a/admin/view/template/extension/module/slideshow.twig
+++ b/admin/view/template/extension/module/slideshow.twig
@@ -34,38 +34,122 @@
               {% endif %}
             </div>
           </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-banner">{{ entry_banner }}</label>
-            <div class="col-sm-10">
-              <select name="banner_id" id="input-banner" class="form-control">
-                {% for banner in banners %}
-                {% if banner.banner_id == banner_id %}
-                <option value="{{ banner.banner_id }}" selected="selected">{{ banner.name }}</option>
-                {% else %}
-                <option value="{{ banner.banner_id }}">{{ banner.name }}</option>
+          <fieldset>
+            <legend>Десктоп</legend>
+            <div class="form-group">
+              <label class="col-sm-2 control-label" for="input-banner">{{ entry_banner }}</label>
+              <div class="col-sm-10">
+                <select name="banner_id" id="input-banner" class="form-control">
+                  {% for banner in banners %}
+                  {% if banner.banner_id == banner_id %}
+                  <option value="{{ banner.banner_id }}" selected="selected">{{ banner.name }}</option>
+                  {% else %}
+                  <option value="{{ banner.banner_id }}">{{ banner.name }}</option>
+                  {% endif %}
+                  {% endfor %}
+                </select>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label" for="input-width">{{ entry_width }}</label>
+              <div class="col-sm-10">
+                <input type="text" name="width" value="{{ width }}" placeholder="{{ entry_width }}" id="input-width" class="form-control" />
+                {% if error_width %}
+                <div class="text-danger">{{ error_width }}</div>
                 {% endif %}
-                {% endfor %}
-              </select>
+              </div>
             </div>
-          </div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label" for="input-height">{{ entry_height }}</label>
+              <div class="col-sm-10">
+                <input type="text" name="height" value="{{ height }}" placeholder="{{ entry_height }}" id="input-height" class="form-control" />
+                {% if error_height %}
+                <div class="text-danger">{{ error_height }}</div>
+                {% endif %}
+              </div>
+            </div>
+          </fieldset>
+
+          <fieldset>
+            <legend>Мобилный</legend>
+            <div class="form-group">
+              <label class="col-sm-2 control-label" for="input-mobile-banner">{{ entry_banner }}</label>
+              <div class="col-sm-10">
+                <select name="mobile_banner_id" id="input-mobile-banner" class="form-control">
+                  {% for banner in banners %}
+                    {% if banner.banner_id == mobile_banner_id %}
+                      <option value="{{ banner.banner_id }}" selected="selected">{{ banner.name }}</option>
+                    {% else %}
+                      <option value="{{ banner.banner_id }}">{{ banner.name }}</option>
+                    {% endif %}
+                  {% endfor %}
+                </select>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label" for="input-mobile-width">{{ entry_width }}</label>
+              <div class="col-sm-10">
+                <input type="text" name="mobile_width" value="{{ mobile_width }}" placeholder="{{ entry_width }}" id="input-mobile-width" class="form-control" />
+                {% if error_width %}
+                  <div class="text-danger">{{ error_width }}</div>
+                {% endif %}
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label" for="input-mobile-height">{{ entry_height }}</label>
+              <div class="col-sm-10">
+                <input type="text" name="mobile_height" value="{{ mobile_height }}" placeholder="{{ entry_height }}" id="input-mobile-height" class="form-control" />
+                {% if error_height %}
+                  <div class="text-danger">{{ error_height }}</div>
+                {% endif %}
+              </div>
+            </div>
+          </fieldset>
+
+
           <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-width">{{ entry_width }}</label>
+            <label class="col-sm-2 control-label" for="input-image">Синее меню</label>
             <div class="col-sm-10">
-              <input type="text" name="width" value="{{ width }}" placeholder="{{ entry_width }}" id="input-width" class="form-control" />
-              {% if error_width %}
-              <div class="text-danger">{{ error_width }}</div>
-              {% endif %}
+              <div class="table-responsive">
+                <table id="blue_menu" class="table table-striped table-bordered table-hover">
+                  <thead>
+                  <tr>
+                    <td class="text-right">Названия</td>
+                    <td class="text-right">Ссылка</td>
+                    <td></td>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  {% set blue_menu_row = 0 %}
+                  {% for menu in blue_menu %}
+                    <tr id="blue-menu-row{{ blue_menu_row }}">
+                      <td class="text-right">
+                        <input type="text" name="blue_menu[{{ blue_menu_row }}][name]" value="{{ menu.name }}" class="form-control"/>
+                      </td>
+                      <td class="text-right">
+                        <input type="text" name="blue_menu[{{ blue_menu_row }}][href]" value="{{ menu.href }}" class="form-control"/>
+                      </td>
+                      <td class="text-left">
+                        <button type="button" onclick="$('#blue-menu-row{{ blue_menu_row }}').remove();" data-toggle="tooltip" title="{{ button_remove }}" class="btn btn-danger"><i class="fa fa-minus-circle"></i></button>
+                      </td>
+                    </tr>
+                    {% set blue_menu_row = blue_menu_row + 1 %}
+                  {% endfor %}
+                  </tbody>
+                  <tfoot>
+                  <tr>
+                    <td colspan="2"></td>
+                    <td class="text-left">
+                      <button type="button" onclick="addRequisite();" data-toggle="tooltip" class="btn btn-primary"><i class="fa fa-plus-circle"></i></button>
+                    </td>
+                  </tr>
+                  </tfoot>
+                </table>
+              </div>
             </div>
           </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-height">{{ entry_height }}</label>
-            <div class="col-sm-10">
-              <input type="text" name="height" value="{{ height }}" placeholder="{{ entry_height }}" id="input-height" class="form-control" />
-              {% if error_height %}
-              <div class="text-danger">{{ error_height }}</div>
-              {% endif %}
-            </div>
-          </div>
+
+
           <div class="form-group">
             <label class="col-sm-2 control-label" for="input-status">{{ entry_status }}</label>
             <div class="col-sm-10">
@@ -85,4 +169,20 @@
     </div>
   </div>
 </div>
+<script type="text/javascript"><!--
+  var blue_menu_row = {{ blue_menu_row }};
+
+  function addRequisite() {
+    html  = '<tr id="blue-menu-row' + blue_menu_row + '">';
+    html += '  <td class="text-right"><input type="text" name="blue_menu[' + blue_menu_row + '][name]" value="" class="form-control" /></td>';
+    html += '  <td class="text-right"><input type="text" name="blue_menu[' + blue_menu_row + '][href]" value="" class="form-control" /></td>';
+    html += '  <td class="text-left"><button type="button" onclick="$(\'#blue-menu-row' + blue_menu_row + '\').remove();" data-toggle="tooltip" title="{{ button_remove }}" class="btn btn-danger"><i class="fa fa-minus-circle"></i></button></td>';
+    html += '</tr>';
+
+    $('#blue_menu tbody').append(html);
+
+    blue_menu_row++;
+  }
+
+  //--></script>
 {{ footer }}
