--- a/catalog/view/theme/default/template/product/search.twig
+++ b/catalog/view/theme/default/template/product/search.twig
@@ -47,7 +47,7 @@
                 <div class="image"><a href="{{ product.href }}"><img src="{{ product.thumb }}" alt="{{ product.name }}" title="{{ product.name }}" class="img-responsive" /></a></div>
                 <div class="caption">
                     <h4><a href="{{ product.href }}">{{ product.name }}</a></h4>
-                    <p>{{ product.manufacturer }}</p>
+                    <p class="brend">{{ product.manufacturer }}</p>
 
                     {% if product.price %}
                     <p class="price"> {% if not product.special %}
