--- a/catalog/view/theme/default/template/product/review.twig
+++ b/catalog/view/theme/default/template/product/review.twig
@@ -14,8 +14,8 @@
 </table>
 {% endfor %}
 <div class="row">
+  <div class="col-sm-12 text-center">{{ results }}</div>
   <div class="col-sm-6 text-left">{{ pagination }}</div>
-  <div class="col-sm-6 text-right">{{ results }}</div>
 </div>
 {% else %}
 <p>{{ text_no_reviews }}</p>
