--- a/catalog/view/theme/default/template/product/product.twig
+++ b/catalog/view/theme/default/template/product/product.twig
@@ -318,50 +318,53 @@
 
                 {% if review_status %}
                     <div class="tab-pane" id="tab-review">
-                        <form class="form-horizontal" id="form-review">
-                            <div id="review"></div>
-                            <h2>{{ text_write }}</h2>
-                            {% if review_guest %}
-                                <div class="form-group required">
-                                    <div class="col-sm-12">
-                                        <label class="control-label" for="input-name">{{ entry_name }}</label>
-                                        <input type="text" name="name" value="{{ customer_name }}" id="input-name" class="form-control" />
-                                    </div>
-                                </div>
-                                <div class="form-group required">
-                                    <div class="col-sm-12">
-                                        <label class="control-label" for="input-review">{{ entry_review }}</label>
-                                        <textarea name="text" rows="5" id="input-review" class="form-control"></textarea>
-                                    </div>
-                                </div>
-                                <div class="form-group required">
-                                    <div class="col-sm-12">
-                                        <label class="control-label">{{ entry_rating }}</label>
-                                        <div style="text-align: center">
-                                            <span style="float:left;">{{ entry_bad }}</span>
-                                            <input type="radio" name="rating" value="1"/>
-                                            &nbsp;
-                                            <input type="radio" name="rating" value="2"/>
-                                            &nbsp;
-                                            <input type="radio" name="rating" value="3"/>
-                                            &nbsp;
-                                            <input type="radio" name="rating" value="4"/>
-                                            &nbsp;
-                                            <input type="radio" name="rating" value="5"/>
-                                            <span style="float: right">{{ entry_good }}</span>
+                        <div id="review"></div>
+                        <a style="width:100%" href="#spoiler-1" data-toggle="collapse" class="btn btn-lg btn-primary">Написать отзыв</a>
+                        <div class="collapse" id="spoiler-1">
+                            <form class="form-horizontal" id="form-review">
+                                <h2>{{ text_write }}</h2>
+                                {% if review_guest %}
+                                    <div class="form-group required">
+                                        <div class="col-sm-12">
+                                            <label class="control-label" for="input-name">{{ entry_name }}</label>
+                                            <input type="text" name="name" value="{{ customer_name }}" id="input-name" class="form-control" />
                                         </div>
                                     </div>
-                                </div>
-                                {{ captcha }}
-                                <div class="buttons clearfix">
-                                    <div class="pull-right">
-                                        <button type="button" id="button-review" data-loading-text="{{ text_loading }}" class="btn btn-primary">{{ button_continue }}</button>
+                                    <div class="form-group required">
+                                        <div class="col-sm-12">
+                                            <label class="control-label" for="input-review">{{ entry_review }}</label>
+                                            <textarea name="text" rows="5" id="input-review" class="form-control"></textarea>
+                                        </div>
                                     </div>
-                                </div>
-                            {% else %}
-                                {{ text_login }}
-                            {% endif %}
-                        </form>
+                                    <div class="form-group required">
+                                        <div class="col-sm-12">
+                                            <label class="control-label">{{ entry_rating }}</label>
+                                            <div style="text-align: center">
+                                                <span style="float:left;">{{ entry_bad }}</span>
+                                                <input type="radio" name="rating" value="1"/>
+                                                &nbsp;
+                                                <input type="radio" name="rating" value="2"/>
+                                                &nbsp;
+                                                <input type="radio" name="rating" value="3"/>
+                                                &nbsp;
+                                                <input type="radio" name="rating" value="4"/>
+                                                &nbsp;
+                                                <input type="radio" name="rating" value="5"/>
+                                                <span style="float: right">{{ entry_good }}</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    {{ captcha }}
+                                    <div class="buttons clearfix">
+                                        <div class="pull-right">
+                                            <button type="button" id="button-review" data-loading-text="{{ text_loading }}" class="btn btn-primary">{{ button_continue }}</button>
+                                        </div>
+                                    </div>
+                                {% else %}
+                                    {{ text_login }}
+                                {% endif %}
+                            </form>
+                        </div>
                     </div>
                 {% endif %}
             </div>
