--- a/catalog/view/theme/default/template/product/product.twig
+++ b/catalog/view/theme/default/template/product/product.twig
@@ -376,29 +376,34 @@
 
       {% if products %}
       <h3>{{ text_related }}</h3>
-          <div class="row spyns"> {% for product in products %}
-                  <div class="product-layout col-lg-3 col-md-3 col-sm-4 col-xs-6 yiy">
-                      <div class="product-thumb transition">
-                          <div class="image"><a href="{{ product.href }}"><img src="{{ product.thumb }}" alt="{{ product.name }}" title="{{ product.name }}" class="img-responsive" /></a></div>
-                          <div class="caption">
-                              <h4><a href="{{ product.href }}">{{ product.name }}</a></h4>
-                              <p class="brend">{{ product.manufacturer }}</p>
+          <div class="row newws">
+              <div class="telocat col-sm-12">
+                  <div class="slick-wrapper">
+                      <div id="slick-product">
+                          {% for product in products %}
+                              <div class="slide-item">
+                                  <div class="product-thumb transition">
+                                      <div class="image"><a href="{{ product.href }}"><img src="{{ product.thumb }}" alt="{{ product.name }}" title="{{ product.name }}" class="img-responsive" /></a></div>
+                                      <div class="caption">
+                                          <h4><a href="{{ product.href }}">{{ product.name }}</a></h4>
+                                          <p class="brend">{{ product.manufacturer }}</p>
 
-                              {% if product.price %}
-                                  <p class="price"> {% if not product.special %}
-                                          {{ product.price }}
-                                      {% else %} <span class="price-new">{{ product.special }}</span> <span class="price-old">{{ product.price }}</span> {% endif %}
-                                  </p>
-                              {% endif %}
-                          </div>
-                          <div class="qt">
-                              <button type="button" class="ct3" onclick="window.location.href='{{ product.href }}'">Подробнее</button>
-                              <button type="button" class="ct2 {% if product.w %}activ{% endif %}" data-toggle="tooltip" title="{{ button_wishlist }}" onclick="wishlist.add('{{ product.product_id }}'); $(this).toggleClass('activ');"> </button>
-                              <button type="button" class="ct2" data-toggle="tooltip" title="{{ button_compare }}" onclick="compare.add('{{ product.product_id }}'); $(this).toggleClass('activ');"> </button>
-                          </div>
-                      </div>
+                                          {% if product.price %}
+                                              <p class="price"> {% if not product.special %}
+                                                      {{ product.price }}
+                                                  {% else %} <span class="price-new">{{ product.special }}</span> <span class="price-old">{{ product.price }}</span> {% endif %}
+                                              </p>
+                                          {% endif %} </div>
+                                      <div class="qt">
+                                          <button type="button" class="ct3" onclick="window.location.href='{{ product.href }}'">Подробнее</button>
+                                          <button type="button" class="ct2" data-toggle="tooltip" title="{{ button_wishlist }}" onclick="wishlist.add('{{ product.product_id }}'); $(this).toggleClass('activ');"> </button>
+                                          <button type="button" class="ct2" data-toggle="tooltip" title="{{ button_compare }}" onclick="compare.add('{{ product.product_id }}'); $(this).toggleClass('activ');"> </button>
+                                      </div>
+                                  </div>
+                              </div>
+                          {% endfor %} </div>
                   </div>
-              {% endfor %} </div>
+              </div></div>
         {% endif %}
         {% if tags %}
         <p>{{ text_tags }}
@@ -410,6 +415,31 @@
       {{ content_bottom }}</div>
     {{ column_right }}</div>
 </div>
+<script>
+    $('#slick-product').slick({
+        rows: 1,
+        dots: false,
+        arrows: true,
+        infinite: true,
+        speed: 300,
+        prevArrow: '<div class="prev"><i class="fa fa-chevron-left"></i></div>',
+        nextArrow: '<div class="next"><i class="fa fa-chevron-right"></i></div>',
+        slidesToShow: 4,
+        slidesToScroll: 4,
+        responsive: [
+            {
+                breakpoint: 1024,
+                settings: {
+                    slidesToShow: 2,
+                    slidesToScroll: 2,
+                    infinite: true,
+                    dots: true
+                }
+            },
+        ]
+    });
+</script>
+
 <script type="text/javascript"><!--
 $('select[name=\'recurring_id\'], input[name="quantity"]').change(function(){
 	$.ajax({
