--- a/catalog/view/theme/default/template/common/column_left.twig
+++ b/catalog/view/theme/default/template/common/column_left.twig
@@ -5,7 +5,7 @@
           <!--<div><a href="index.php?route=checkout/cart"><span class="cart"></span> <span class="texts">Корзина</span></a></div>-->
           <div><a href="{{ wishlist }}" id="wishlist-total" title="{{ text_wishlist }}"><span class="wishlist"></span> <span class="texts">Избранное</span></a></div>
           <div><a href="index.php?route=product/compare"><span class="compare"></span> <span class="texts">Сравнить</span></a></div>
-
+        {#<div><a href="index.php?route=information/information&&information_id=4"><span class="about"></span> <span class="texts">О нас</span></a></div>#}
   </div>
   {% if modules %}
       {% for module in modules %}
