--- a/catalog/view/theme/default/template/product/product.twig
+++ b/catalog/view/theme/default/template/product/product.twig
@@ -154,7 +154,7 @@
            </div>-->
           {% endif %}
 		  <div class="form-group">
-		    <button type="button" href="index.php?route=common/popups&popup_product_id={{ product_id }}" class="agree btn btn-primary btn-lg btn-block">Получить консультацию</button>
+		    <button type="button" data-name="{{ heading_title }}" href="index.php?route=common/popups&popup_product_id={{ product_id }}" class="agree btn btn-primary btn-lg btn-block">Получить консультацию</button>
 		  </div>
           <div class="clear"></div>
           <div id="product">
