--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -195,7 +195,12 @@
             </div>
             <div class="col-sm-3 hidden-xs hidden-sm">
                 <!--<a class="btn btn-primary btn-block" href="{{ login }}">Вход | Регистрация</a>-->
-                <a class="agree btn btn-primary btn-block" href="index.php?route=common/popups">Заказать звонок</a>
+                <div class="col-sm-5">
+                    <a class="agree btn btn-primary btn-block" href="index.php?route=common/popups/contact">Контакты</a>
+                </div>
+                <div class="col-sm-7">
+                    <a class="agree btn btn-primary btn-block" href="index.php?route=common/popups">Заказать звонок</a>
+                </div>
             </div>
         </div>
     </div>
