--- a/catalog/view/theme/default/template/extension/module/banners.twig
+++ b/catalog/view/theme/default/template/extension/module/banners.twig
@@ -4,7 +4,7 @@
 			<div class="index__banner-title">{{ ib_title }}</div>
 			<div class="index__banner-text">{{ ib_text }}</div>
 			<div class="index__banner-button">
-				<a href="index.php?route=common/popups2" class="btn btn-bans agree">{{ ib_button }}</a>
+				<a href="index.php?route=common/popups&popup_category_id=646" class="btn btn-bans agree">{{ ib_button }}</a>
 			</div>
 		</div>
 		<div class="index__banner-image"><img src="{{ ib_image }}" alt="{{ ib_title }}" class="img-responsive" /></div>
