--- a/catalog/view/theme/default/template/product/category.twig
+++ b/catalog/view/theme/default/template/product/category.twig
@@ -19,7 +19,7 @@
       <div class="row">
         <div class="col-sm-12">{{ description }}</div>
           {% if category_id == 646 %}
-              <div class="col-sm-12"><a href="index.php?route=common/popups2" class="btn btn-primary btn-bans agree">Разместить БУ станок</a></div>
+              <div class="col-sm-12"><a href="index.php?route=common/popups&popup_category_id={{ category_id }}" class="btn btn-primary btn-bans agree">Разместить БУ станок</a></div>
           {% endif %}
       </div>
       <hr>
